feat: SentinelWatch v1.0 — complete surveillance detection system
- tail_detector.py: 4 detection modes (HOME/ROAM/DOORBELL/WATCHLIST)
  - DeviceProfile dataclass, encounter scoring, signal trend analysis
  - Cross-mode surveillance detection, SSID linger alerts
  - 🔒 SECURE: SecureKismetDB parameterized queries (no SQL injection)
  - Resend.io + Twilio notification hooks on every alert path

- notifications.py: Multi-channel alert dispatcher
  - Resend.io email + Twilio SMS with per-channel level filtering
  - Known arrival, SSID linger, watchlist hit specific alerts

- multi_location_tracker.py: GPS stalker ranking engine
  - Haversine distance, GPS checkpoint correlation
  - Stalker score = locations² × log(hits) × recency_weight
  - 🔒 SECURE: SecureKismetDB parameterized queries

- web_ui.py: Flask dashboard with SSE live streaming
  - All API routes: status, devices, POI, watchlist, alerts, mode switch
  - /api/stalkers: multi-location ranking endpoint
  - /api/create_launcher: creates ~/Desktop/SentinelWatch.command
  - /api/checkpoint: add GPS checkpoint via POST

- templates/index.html: Apple Glass dark dashboard
  - SSE live alert feed, expand-to-label device rows
  - Multi-location stalker panel, setup wizard modal
  - Notification toggles, CSV/JSON export

- setup_wizard.py: 6-step macOS M1 terminal setup wizard
  - System check, Kismet config, Resend, Twilio, thresholds
  - Creates ~/Desktop/SentinelWatch.command desktop launcher

- start.sh: One-command launcher for all 7 modes
  - venv auto-activate, auto browser-open on macOS

- config.json: Updated for macOS M1 paths, all new sections
- requirements.txt: Added flask, colorama, rich, resend, twilio

--- a/config.json
+++ b/config.json
@@ -2,26 +2,64 @@
   "paths": {
     "base_dir": ".",
     "log_dir": "logs",
-    "kismet_logs": "/home/matt/kismet_logs/*.kismet",
+    "kismet_logs": "/Users/mistergoodbond/*.kismet",
+    "whitelist": "data/home_whitelist.json",
+    "roam_log": "data/roam_sessions.json",
+    "alerts_log": "data/alerts.log",
     "ignore_lists": {
       "mac": "mac_list.py",
       "ssid": "ssid_list.py"
     }
   },
-  "timing": {
-    "check_interval": 60,
-    "list_update_interval": 5,
-    "time_windows": {
-      "recent": 5,
-      "medium": 10,
-      "old": 15,
-      "oldest": 20
-    }
+  "kismet_api": {
+    "base_url": "http://localhost:2501",
+    "username": "kismet",
+    "password": ""
   },
-  "search": {
-    "lat_min": 31.3,
-    "lat_max": 37.0,
-    "lon_min": -114.8,
-    "lon_max": -109.0
+  "timing": {
+    "check_interval": 30,
+    "doorbell_scan_interval": 10,
+    "roam_scan_interval": 15,
+    "list_update_interval": 5,
+    "unknown_ssid_linger_minutes": 5
+  },
+  "thresholds": {
+    "person_of_interest_min_encounters": 3,
+    "stalker_alert_encounters": 5,
+    "signal_approaching_threshold": -65,
+    "cross_mode_alert": true
+  },
+  "alerts": {
+    "console_alerts": true,
+    "log_alerts": true,
+    "resend": {
+      "enabled": false,
+      "api_key": "",
+      "from_email": "sentinelwatch@yourdomain.com",
+      "to_email": "",
+      "send_on": [
+        "CRITICAL",
+        "WARNING"
+      ]
+    },
+    "twilio": {
+      "enabled": false,
+      "account_sid": "",
+      "auth_token": "",
+      "from_number": "",
+      "to_number": "",
+      "send_on": [
+        "CRITICAL"
+      ]
+    },
+    "known_device_arrival_notify": true,
+    "unknown_ssid_linger_notify": true,
+    "watchlist_notify_all_channels": true
+  },
+  "gps": {
+    "lat_min": 40.4,
+    "lat_max": 40.8,
+    "lon_min": -84.6,
+    "lon_max": -84.2
   }
 }
