--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-# Core dependencies for Chasing Your Tail (CYT)
+# SentinelWatch — Python Dependencies
 requests>=2.28.0
 cryptography>=40.0.0
 
-# Optional dependencies for enhanced features
-# Uncomment as needed:
+# Web Dashboard
+flask>=3.0.0
+flask-cors>=4.0.0
 
-# For web dashboard (future enhancement)
-# flask>=2.3.0
-# flask-socketio>=5.3.0
+# Terminal UI / Colors
+colorama>=0.4.6
+rich>=13.0.0
 
-# For advanced data analysis
-# pandas>=1.5.0
-# numpy>=1.24.0
-# matplotlib>=3.7.0
+# Resend.io email API
+resend>=2.0.0
 
-# For testing
-# pytest>=7.0.0
-# pytest-cov>=4.0.0
+# Twilio SMS
+twilio>=9.0.0
